few  style fixes

--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
           novalidate>
 
         <div class="textintro">
-            <h1>Hi there! let start the trial!</h1>
+            <h1>Hello friend!</h1>
             <p>Log-in to access the our content</p>
             <p class="message"
                ng-show="message"> {{ message }}</p>
